footer modified and overflow-y scroll added where appropriate. alert bar styled in FAQ. Added padding top to FAQ to avoid overlay

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ nav {
   font-family: Recursive, sans-serif;
   font-weight: bold;
   margin-bottom: 0;
-  border-color: #f0f8ff;
+  border-color: #ff9999;
   border-radius: 0%;
   overflow:auto;
 }
@@ -63,7 +63,6 @@ nav {
 
 /*----Body-----*/
 body{
-    background-color: #80C4FF;
     height:auto; 
 }
 
@@ -73,7 +72,12 @@ section {
   background-color: #f0f8ff;
   font-family: Recursive, sans-serif;
   color: #1a1a1a;
-  overflow:scroll;
+  overflow-y:scroll;
+}
+
+.sectionpadding
+{
+    padding-top: 110px;
 }
 
 .hero-image {
@@ -98,6 +102,7 @@ section {
 
 /*-----------------------------------learnaboutireland-------------------------------------------------------------*/
 
+/*------Card flip code renders in exploreireland page as well----*/
 .flip-card {
   background-color: transparent;
   width: 300px;
@@ -201,7 +206,7 @@ h2{
 
 /*---------------explore ireland----------------------------------------------------------*/
 #map {
-  height: 130vh;
+  height: 140vh;
 }
 
 .activity, .activity2, .cities, .cities2, .wellness, .wellness2, .culture, .culture2 {
